--- a/sources/sass/pages/chapter2.scss
+++ b/sources/sass/pages/chapter2.scss
@@ -8,17 +8,38 @@
     background-image: url("../../assets/img/chapter1_slide_4.jpg");
     background-position: center;
     background-size: cover;
+
     img {
       position: absolute;
       right: 170px;
-      bottom:60px;
+      bottom: 60px;
       width: 500px;
-      z-index:110;
+      z-index: 110;
     }
   }
 
-  .scene3{
-    .second-testimony{
+  .scene3 {
+    .card {
+      video {
+        width: 45%;
+        height:auto;
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform: translateX(-50%) translateY(-50%);
+      }
+      a.player--video--btn{
+        position: absolute;
+        bottom:5px;
+        left:50%;
+        transform: translateX(-50%) translateY(-50%);
+      }
+    }
+  }
+
+  .scene3,
+  .scene4 {
+    .second-testimony {
       margin-top: 90px;
     }
   }
@@ -28,20 +49,42 @@
     background-image: url("../../assets/img/chapter2_slide_4.jpg");
     background-position: center;
     background-size: cover;
+    .card{
+      p.card-type {
+        font-size: 18px;
+        color: $grey;
+        font-family: $title;
+        font-size: 18px;
+        text-transform: uppercase;
+        margin: 30px 30px 0;
+      }
+
+      p.card-content {
+        font-family: $content;
+        color: $white;
+        width: 70vw;
+        vertical-align: top;
+        margin:20px 30px;
+      }
+    }
   }
+
   .scene6 {
     &--content {
       background-color: #191919;
       width: 100%;
       height: 100%;
+
       div {
         width: 100%;
         height: auto;
+
         img {
           position: absolute;
           top: 0;
           left: 0;
         }
+
         p {
           color: $white;
           position: absolute;
@@ -52,37 +95,39 @@
           text-shadow: 2px 2px 8px rgba(black, 0.7);
         }
       }
+
       &--money img,
       &--money p {
         opacity: 1;
         z-index: 20;
       }
+
+      &--areas img,
+      &--areas p,
       &--geographic img,
       &--geographic p,
       &--production img,
       &--production p,
-      &--areas img,
-      &--areas p,
       &--women img,
-      &--women p
-      {
+      &--women p {
         opacity: 0;
         z-index: 18;
-        transition: opacity 0.15s ease-in-out;
+        transition: opacity 0.3s ease-in-out;
       }
+
+      &--areas.active-content img,
+      &--areas.active-content p,
       &--geographic.active-content img,
       &--geographic.active-content p,
       &--production.active-content img,
       &--production.active-content p,
-      &--areas.active-content img,
-      &--areas.active-content p,
       &--women.active-content img,
-      &--women.active-content p
-      {
+      &--women.active-content p {
         opacity: 1;
         z-index: 25;
       }
     }
+
     &--nav {
       z-index: 100;
       position: absolute;
@@ -91,87 +136,101 @@
       transform: translateY(25%);
       font-family: $title;
       width: 150px;
+
       .money-title {
         transform: translateX(-10px);
         color: $red;
       }
+
       .money-title::after {
         opacity: 1;
       }
+
       &--title {
         padding: 5px;
         transition: all 0.15s ease-in-out;
         color: $white;
       }
+
       &--title::after {
         position: absolute;
         left: -8px;
         top: 10px;
-        width:3px;
+        width: 3px;
         border-radius: 2px;
         height: 15px;
-        background:$red;
-        content:'';
-        opacity:0;
+        background: $red;
+        content: '';
+        opacity: 0;
         transition: all 0.15s ease-in-out;
       }
+
       &--title:hover {
         cursor: pointer;
         transform: translateX(-10px);
         color: $red;
       }
-      &--title:hover {
 
-      }
+      &--title:hover {}
+
       &--title:hover::after {
-        opacity:1;
+        opacity: 1;
       }
     }
   }
-  .scene5{
+
+  .scene5 {
     img {
       position: absolute;
       right: 30%;
-      bottom:60px;
+      bottom: 60px;
       width: 500px;
-      z-index:110;
+      z-index: 110;
     }
-    div.container-quotes{
-      width:95vw;
-      height:70vh;
-      margin:20vh auto;
+
+    div.container-quotes {
+      width: 95vw;
+      height: 70vh;
+      margin: 20vh auto;
       position: relative;
-      img{
+
+      img {
         position: absolute;
-        top:-25%;
-        left:30%;
-        width:500px;
+        top: -25%;
+        left: 30%;
+        width: 500px;
       }
-      div.quotes-left{
+
+      div.quotes-left {
         float: left;
-        width:30vw;
+        width: 30vw;
       }
-      div.quotes-right{
-        float:right;
-        width:35vw;
+
+      div.quotes-right {
+        float: right;
+        width: 35vw;
       }
-      div.clear-both{
+
+      div.clear-both {
         clear: both;
       }
-      span.player--video--title{
+
+      span.player--video--title {
         font-family: $title;
-        font-size:20px;
-        color:white;
+        font-size: 20px;
+        color: white;
         text-transform: uppercase;
       }
-      p{
+
+      p {
         font-family: $content;
-        font-size:16px;
-        font-style:italic;
-        color:white;
-        margin:15px 0px 100px 0px;
+        font-size: 16px;
+        font-style: italic;
+        color: white;
+        margin: 15px 0 100px;
       }
-      div.quotes-right div.quote:last-child{
+
+      div.quotes-right div.quote:last-child {
         margin-left: 80px;
       }
     }
@@ -182,39 +241,46 @@
     background-image: url("../../assets/img/chapter2_slide_4.jpg");
     background-position: center;
     background-size: cover;
-    p.davao-content{
-      top:30vh;
+
+    p.davao-content {
+      top: 30vh;
     }
-    p.davao-subtitle{
-      top:40vh;
+
+    p.davao-subtitle {
+      top: 40vh;
     }
-    .card{
+
+    .card {
       display: none;
-      .card-content{
-        width:65vw;
+
+      .card-content {
+        width: 65vw;
       }
-      .testimony-quote{
+
+      .testimony-quote {
         font-family: $content;
         font-size: 22px;
-        color:white;
+        color: white;
         font-style: italic;
         margin: 40px 20px;
       }
     }
-    .player--video--btn{
-      display:block;
-      margin:10px auto;
-    }
-    .player--video--title{
-      color:$white;
-      left:32vw;
-      font-size:15px;
-      transform: translateX(-50%) translateY(-50%);
-    }
-    p.content{
-      margin-top:-50px;
+
+    .player--video--btn {
+      display: block;
+      margin: 10px auto;
     }
 
+    .player--video--title {
+      color: $white;
+      left: 32vw;
+      font-size: 15px;
+      transform: translateX(-50%) translateY(-50%);
+    }
+
+    p.content {
+      margin-top: -50px;
+    }
     @for $i from 1 through 3 {
       .testimony-#{$i} {
         margin-top: 80px * $i;
@@ -233,6 +299,13 @@ div.card {
   margin: auto;
   z-index: 102;
   border-radius: 4px;
+  a{
+    font-size:30px;
+    color:$white;
+    position: absolute;
+    top:20px;
+    right: 30px;
+  }
 
   p.card-subtitle,
   p.card-title {
@@ -272,7 +345,6 @@ div.card {
     }
   }
 }
-
 // testimony
 p.davao-title {
   z-index: 10;
@@ -287,7 +359,8 @@ p.davao-title {
   transform: translateX(-50%) translateY(-50%);
 }
 
-p.davao-content, p.davao-subtitle {
+p.davao-content,
+p.davao-subtitle {
   position: absolute;
   z-index: 10;
   font-family: $content;
