--- a/sources/sass/pages/home.scss
+++ b/sources/sass/pages/home.scss
@@ -16,6 +16,17 @@
     left: 0;
     width: 100%;
     height: 100%;
+    p.disclaimer{
+      font-size:13px;
+      //font-style: italic;
+      width:80vw;
+      font-family: $title;
+      position: absolute;
+      bottom: 5px;
+      color:$transparent-white;
+      left:60%;
+      transform: translate(-50%, -50%);
+    }
     &--center {
       z-index: 100;
       position: absolute;
@@ -23,6 +34,10 @@
       left: 50%;
       text-align: center;
       transform: translate(-50%, -50%);
+      h2{
+        font-size:18px;
+      }
+
       &--btn a {
         transform: translate(-50%, 0%);
         margin-top: 180px;
